# mcp

./: Cargo.toml  README.md
src/: file_read.rs  lib.rs  mcp.rs  ollama.rs
