[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

# Define the mcp-client binary
[[bin]]
name = "mcp-client"
path = "src/bin/mcp-client.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp-server.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
